force-app/main/default/objects/SBQQ__Quote__c/fields/Account_Address__c.field-meta.xml
<CustomField>
    <fullName>Account_Address__c</fullName>
    <label>Account Address</label>
    <type>Address</type>
</CustomField>