force-app/main/default/objects/SBQQ__Quote__c/fields/AccountBillingCountry__c.field-meta.xml
<CustomField>
    <fullName>AccountBillingCountry__c</fullName>
    <formula>TEXT(Account_Address__CountryCode__s)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account billing country</label>
    <type>Text</type>
</CustomField>