force-app/main/default/objects/SBQQ__Quote__c/fields/AdditionalDiscountPctOneTime__c.field-meta.xml
<CustomField>
    <fullName>AdditionalDiscountPctOneTime__c</fullName>
    <label>One-Time Discount (%)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>