force-app/main/default/objects/SBQQ__Quote__c/fields/AdditionalDiscountPctRecurring__c.field-meta.xml
<CustomField>
    <fullName>AdditionalDiscountPctRecurring__c</fullName>
    <label>Recurring Discount (%)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>