force-app/main/default/objects/SBQQ__Quote__c/fields/AdditionalDiscountTargetOneTIme__c.field-meta.xml
<CustomField>
    <fullName>AdditionalDiscountTargetOneTIme__c</fullName>
    <label>Target One-Time Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>