force-app/main/default/objects/SBQQ__Quote__c/fields/AdditionalDiscountTargetRecurring__c.field-meta.xml
<CustomField>
    <fullName>AdditionalDiscountTargetRecurring__c</fullName>
    <label>Target Recurring Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>