force-app/main/default/objects/SBQQ__Quote__c/fields/AftersalesApprovalRequired__c.field-meta.xml
<CustomField>
    <fullName>AftersalesApprovalRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Request Aftersales Approval</label>
    <type>Checkbox</type>
</CustomField>