force-app/main/default/objects/SBQQ__Quote__c/fields/Close_Result__c.field-meta.xml
<CustomField>
    <fullName>Close_Result__c</fullName>
    <label>Close Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ordered</fullName>
            </value>
            <value>
                <fullName>Pending Order</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>