force-app/main/default/objects/SBQQ__Quote__c/fields/Count_of_Legal_Approval_Lines__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Legal_Approval_Lines__c</fullName>
    <label>Count of Legal Approval Lines</label>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.Modified_Subscription_Term__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>