force-app/main/default/objects/SBQQ__Quote__c/fields/Count_of_RPI_Cap_Agreed_Lines__c.field-meta.xml
<CustomField>
    <fullName>Count_of_RPI_Cap_Agreed_Lines__c</fullName>
    <label>Count of RPI Cap Agreed Lines</label>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.RPIAdjustmentCapAgreed__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>