force-app/main/default/objects/SBQQ__Quote__c/fields/EditLinesFieldSetName__c.field-meta.xml
<CustomField>
    <fullName>EditLinesFieldSetName__c</fullName>
    <defaultValue>&quot;SBQQ__LineEditor&quot;</defaultValue>
    <label>EditLinesFieldSetName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>