force-app/main/default/objects/SBQQ__Quote__c/fields/FixedRenewalPriceAdjustment__c.field-meta.xml
<CustomField>
    <fullName>FixedRenewalPriceAdjustment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fixed Renewal Price Adjustment?</label>
    <type>Checkbox</type>
</CustomField>