force-app/main/default/objects/SBQQ__Quote__c/fields/Formatted_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Formatted_Approved_Date__c</fullName>
    <label>Formatted Approved Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>