force-app/main/default/objects/SBQQ__Quote__c/fields/HeaderFieldSetName__c.field-meta.xml
<CustomField>
    <fullName>HeaderFieldSetName__c</fullName>
    <formula>IF(ISPICKVAL(Discount_Type__c,&quot;Discount %&quot;),&quot;Editor_DiscountPct&quot;,
  IF(ISPICKVAL(Discount_Type__c,&quot;Target Total&quot;),&quot;Editor_TargetTotal&quot;,&quot;Editor_DiscountPct&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HeaderFieldSetName</label>
    <type>Text</type>
</CustomField>