force-app/main/default/objects/SBQQ__Quote__c/fields/Highest_Approval_Tier__c.field-meta.xml
<CustomField>
    <fullName>Highest_Approval_Tier__c</fullName>
    <label>Highest Approval Tier</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>