force-app/main/default/objects/SBQQ__Quote__c/fields/LegalApprovalRequired__c.field-meta.xml
<CustomField>
    <fullName>LegalApprovalRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Request Legal Approval</label>
    <type>Checkbox</type>
</CustomField>