force-app/main/default/objects/SBQQ__Quote__c/fields/Net_Total_One_Time_Products__c.field-meta.xml
<CustomField>
    <fullName>Net_Total_One_Time_Products__c</fullName>
    <label>Net Total - One-time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>