force-app/main/default/objects/SBQQ__Quote__c/fields/Quick_Quote__c.field-meta.xml
<CustomField>
    <fullName>Quick_Quote__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quick Quote?</label>
    <type>Checkbox</type>
</CustomField>