force-app/main/default/objects/SBQQ__Quote__c/fields/Quote_Number__c.field-meta.xml
<CustomField>
    <fullName>Quote_Number__c</fullName>
    <formula>TEXT(Account_Address__CountryCode__s) + &apos;-&apos; + SUBSTITUTE(Name, &apos;Q-&apos;,&apos;&apos;) + &apos;-REV&apos; + TEXT(Quote_Revision__c)</formula>
    <label>Quote Number</label>
    <type>Text</type>
</CustomField>