force-app/main/default/objects/SBQQ__Quote__c/fields/Quote_Revision__c.field-meta.xml
<CustomField>
    <fullName>Quote_Revision__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Quote Revision</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>