force-app/main/default/objects/SBQQ__Quote__c/fields/RDApprovalRequired__c.field-meta.xml
<CustomField>
    <fullName>RDApprovalRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires R&amp;D Approval?</label>
    <type>Checkbox</type>
</CustomField>