force-app/main/default/objects/SBQQ__Quote__c/fields/RDApproverQueueId__c.field-meta.xml
<CustomField>
    <fullName>RDApproverQueueId__c</fullName>
    <formula>&apos;00G3H000001ywPgUAI&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>R&amp;D Approver Queue Id</label>
    <type>Text</type>
</CustomField>