force-app/main/default/objects/SBQQ__Quote__c/fields/Revenue_Type__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>One Time or Recurring Revenue Type?</description>
    <label>Revenue Type</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>