force-app/main/default/objects/SBQQ__Quote__c/fields/Total_Recurring_Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Recurring_Discount_Amount__c</fullName>
    <formula>List_Total_Recurring_Products__c -  Net_Total_Recurring_Products__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Recurring Discount Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>