force-app/main/default/objects/SBQQ__Quote__c/fields/TotalMRR__c.field-meta.xml
<CustomField>
    <fullName>TotalMRR__c</fullName>
    <label>Net Total - MRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>