force-app/main/default/objects/SBQQ__Quote__c/recordTypes/Draft.recordType-meta.xml
<RecordType>
    <fullName>Draft</fullName>
    <active>true</active>
    <description>Draft quote</description>
    <label>Draft</label>
</RecordType>